--- a/GestStreamTest/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GestStreamTest/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -76,6 +76,10 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
+[MRU]
+MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem1=/Game/Map/LevelToLoad
+
 [EditorStartup]
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
@@ -85,4 +89,43 @@ GestStreamTest.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+
+[/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
+bHideEditorDataLayers=False
+bHideRuntimeDataLayers=False
+bHideDataLayerActors=True
+bHideUnloadedActors=False
+bShowOnlySelectedActors=False
+bHighlightSelectedDataLayers=True
+bDisableLoadingOfLastLoadedCells=False
+bBugItGoLoadCells=False
+bShowCellCoords=False
+PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
+
+[ContentBrowserRecent]
+MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem1=/Game/Map/LevelToLoad
+
+[PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+
+[DetailCategories]
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
+
+[WorldBrowser]
+DisplayPaths=False
+DisplayActorsCount=False
 
