Random compiled files

--- a/GestStreamTest/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GestStreamTest/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1060,7 +1060,7 @@ BlueprintGraph.TimeStamp=2022.10.01-12.08.50
 BlueprintGraph.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
